--- a/theme/zzz.css
+++ b/theme/zzz.css
@@ -534,10 +534,7 @@ body {
 
 /* 主题设置面板 */
 .theme-settings-panel {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    margin: auto;
     width: 400px;
     max-width: 90%;
     background-image: url('/theme/zzz_bg.png');
@@ -569,10 +566,6 @@ body {
     font-size: 18px;
     cursor: pointer;
     padding: 5px;
-}
-
-.settings-section {
-    margin-bottom: 20px;
 }
 
 .settings-section h4 {
