--- a/theme/zzz.css
+++ b/theme/zzz.css
@@ -23,7 +23,7 @@ body {
 }
 
 .container {
-    max-width: 1200px;
+    width: 100%;
     margin: 0 auto;
     padding: 20px;
     padding-top: 0px;
