--- a/theme/zzz.css
+++ b/theme/zzz.css
@@ -775,3 +775,51 @@ input:checked + .slider:before {
     background: unset;
     color: white;
 }
+
+.file-selection-item:hover {
+    background-color: #494949;
+}
+
+.category-input{
+    background-color: #2a2a2a;
+}
+
+.file-selection-item .file-type {
+    font-size: 12px;
+    color: white;
+}
+
+
+.file-selection-container{
+    background-image: url('/theme/zzz_bg.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.category-input,
+.file-selection-btn.cancel {
+    background-color: rgb(70, 70, 70);
+    color: #fff;
+}
+
+.file-selection-header,
+.file-selection-footer {
+    border-color: #4a5568;
+}
+
+.file-selection-item:hover {
+    background-color: #4a5568;
+}
+
+.file-selection-item .file-type,
+.loading-indicator {
+    color: #a0aec0;
+}
+
+.file-selection-item:hover {
+    background-color: #353535;
+}
+
+.file-selection-item.active {
+    background-color: #909090;
+}
