--- a/theme/dark.css
+++ b/theme/dark.css
@@ -144,6 +144,8 @@ body {
 
 .rename-overlay {
     background: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    backdrop-filter: blur(5px);
 }
 
 .rename-container {
