收藏置顶功能回归+优化主题设置策略+修复了弹出权限框时呼出/收起异常的问题

--- a/theme/frame.css
+++ b/theme/frame.css
@@ -481,7 +481,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 20px;
+    height: 10%;
 }
 
 .settings-header h3 {
